# Shortener.rs

./: Cargo.toml
src/: main.rs
templates/: 404.html  index.html
