[package]
name = "shortener"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.8"
actix-session = "0.5.0-beta.2"
dotenv = "0.15.0"
mongodb = "2.0.0-beta.2"
tera = "1.12.1"
serde = "1.0.126"
rand = "0.8.4"